tests/baselines/reference/es6ClassSuperCodegenBug.errors.txt
tests/cases/compiler/es6ClassSuperCodegenBug.ts(9,10): error TS7027: Unreachable code detected.


==== tests/cases/compiler/es6ClassSuperCodegenBug.ts (1 errors) ====
    class A {
    	constructor(str1:string, str2:string) {}
    }
    class B extends A {
        constructor() {
    	    if (true) {
    	        super('a1', 'b1');
    	    } else {
    	        super('a2', 'b2');
    	        ~~~~~
!!! error TS7027: Unreachable code detected.
    	    }
        }
    }
    